--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,8 @@ add_executable(
         c_01_hello_world
         topics/c/01_hello_world/main.c
 )
+
+add_executable(
+        c_02_read_cli_input
+        topics/c/02_read_cli_input/main.c
+)
